Replacement to the small screen navigation menu Fix some alignment issues on hamburger menu activation

--- a/src/styles/base-styles/page-header/page-header.css
+++ b/src/styles/base-styles/page-header/page-header.css
@@ -14,3 +14,7 @@
 .small-screen-page-header__hamburger-menu {
 	display: none;
 }
+
+.small-screen-page-header__navigation-menu {
+	display: none;
+}
