--- a/src/styles/small-screen/page-header/small-screen-page-header-hamburger-menu.css
+++ b/src/styles/small-screen/page-header/small-screen-page-header-hamburger-menu.css
@@ -25,8 +25,6 @@
 .small-screen-page-header__hamburger-menu-top-bar-rotate {
 	transform: rotate(-45deg);
 	transform-origin: right;
-	position: relative;
-	top: 3px;
 }
 
 .small-screen-page-header__hamburger-menu-bottom-bar-rotate {
